@@ -36,4 +36,5 @@ OVERALL TODO
    Add git tag r-1 when switching
    
 * v0.0.5-251 (19 Oct. 2016 - ???) SLOC ??? FT ???:?? UT ?
+- Fix the configuration cancel button segfault
 - Make the main menu's exit button exit the game
